--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#eef5ee</color>
+    <color name="colorPrimary">#f1b707</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#f70810</color>
 </resources>
